--- a/frontend/css/aboutus.css
+++ b/frontend/css/aboutus.css
@@ -161,11 +161,13 @@ h3 {
     font-size: 1.5rem;
     color: #F3EEED;
     margin-top: 30px;
+    margin-bottom: 20px; /* Adjust the value as needed */
 }
 
 ul {
     list-style: none;
     padding-left: 0;
+    line-height: 1.8; /* Adjust the value as needed */
 }
 
 li {
